feat(prisma/): install prisma

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.0.0",
     "express": "^4.18.2"
   },
   "devDependencies": {
@@ -24,6 +25,7 @@
     "cz-conventional-changelog": "^3.3.0",
     "nodemon": "^3.0.1",
     "prettier": "^3.0.0",
+    "prisma": "^5.0.0",
     "typescript": "^5.1.6"
   },
   "config": {
