--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.0.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-validator": "^7.0.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
