--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.0.0",
+    "bson": "^5.4.0",
     "express": "^4.18.2",
     "express-validator": "^7.0.1"
   },
