--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "@prisma/client": "^5.0.0",
     "express": "^4.18.2",
-    "express-validator": "^7.0.1"
+    "express-validator": "^7.0.1",
+    "socket.io": "^4.7.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
