--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bson": "^5.4.0",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "html-entities": "^2.4.0",
     "socket.io": "^4.7.1"
   },
   "devDependencies": {
