--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "set NODE_ENV=production && npm run build:prisma && npm run build:app",
     "build:prisma": "prisma generate",
-    "build:app": "npx tsc && node dist/index.js",
-    "start": "node dist/index.js",
+    "build:app": "npx tsc && node dist/server.js",
+    "start": "node dist/server.js",
     "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/server.js\"",
     "format": "npx prettier ./src --write",
     "commit": "cz"
